--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
 	<section>
 		<h2>Contact Form</h2>
 		<p>This form is only for demonstration purpose.
-		don't use it to cantact me!</p>
+		don't use it to contact me!</p>
 		<form id="contactForm">
 			<label for="name">Name:</label>
 			<input type="text" id="name" name="name" required>
