--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 	</header>
 	<section>
 		<h2>Welcome Home!</h2>
-		<img src="monkey.jpg">
-		
+		<img src="monkey.jpg" class="responsive-image">
+		<p>Image size adjusted</p>
 	</section>
 	<footer>
 		<p>&copy; 2023 Ali Reza. All rights reserved.</p>
