--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
 		<form id="contactForm"
 		action="https://forms.gle/6T3dcLxQMaNF2AyD9"
 		method="Post">
-		<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdqeASS5Cqp6t_FefxV1WjqWAzOAkkNgqqoMm1i3-YsB_COJg/viewform?embedded=true" width="640" height="721" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+		<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdqeASS5Cqp6t_FefxV1WjqWAzOAkkNgqqoMm1i3-YsB_COJg/viewform?embedded=true" width="%100" height="800" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 		</form>
 	</section>
 	<footer>
