--- a/about.html
+++ b/about.html
@@ -20,9 +20,11 @@
 		<h2>About Me</h2>
 		<p>I am a web developer passionate about creating amazing websites.</p>
 		<p>I live in Wageningen.<p>
-		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d39329.648997286626!2d5.665114249999999!3d51.968545850000005!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c7ab5f132a95a3%3A0xa86611681fcf7643!2sWageningen!5e0!3m2!1sen!2snl!4v1689107520714!5m2!1sen!2snl"
-		width="600" height="450" style="border:0;"
-		allowfullscreen="" loading="lazy"></iframe>
+		<div class="google-map">
+			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d39329.648997286626!2d5.665114249999999!3d51.968545850000005!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c7ab5f132a95a3%3A0xa86611681fcf7643!2sWageningen!5e0!3m2!1sen!2snl!4v1689107520714!5m2!1sen!2snl"
+			width="600" height="450" style="border:0;"
+			allowfullscreen="" loading="lazy"></iframe>
+		<div>
 	</section>
 	<footer>
 		<p>&copy; 2023 Ali Reza. All rights reserved.</p>
