--- a/index.html
+++ b/index.html
@@ -16,9 +16,12 @@
 			</ul>
 		</nav>
 	</header>
-	<section>
+	<section id="welcome">
 		<h2>Welcome Home!</h2>
-		<img src="monkey.jpg" class="responsive-image">
+		
+		<img src="images/monkey1.jpg" alt="Monkey1" class="responsive-image">
+		<img src="images/monkey2.jpg" alt="Monkey1" class="responsive-image">
+		<img src="images/monkey3.jpg" alt="Monkey1" class="responsive-image">
 		
 	</section>
 	<footer>
