add table into a file

--- a/about.html
+++ b/about.html
@@ -22,24 +22,7 @@
 			<p>I am a web developer passionate about creating amazing websites.</p>
 			
 			<h3>Skills</h3>
-			<table>
-				<tr>
-					<th>Language</th>
-					<th>Proficiency</th>
-				</tr>
-				<tr>
-					<td>HTML</td>
-					<td>advanced</td>
-				</tr>
-				<tr>
-					<td>CSS</td>
-					<td>Intermediate</td>
-				</tr>
-				<tr>
-					<td>JavaScript</td>
-					<td>Intermediate</td>
-				</tr>
-			</table>
+			<iframe src="table.html" frameborder="0" width="100%"></iframe>
 		</div>
 		<div id="location">
 			<p>I live in Wageningen.<p>
